test/basic/bind_tile_config_reject_explicit_left_a5.pto
// RUN: ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {"pto.device-spec" = "Ascend910B1"} {
  func.func @reject_bind_tile_config_left_a5() {
    %c32 = arith.constant 32 : index
    %alloc_l = memref.alloc() : memref<32x32xf32, #pto.address_space<left>>
    %lhs = pto.bind_tile %alloc_l, %c32, %c32 {config = #pto.tile_buf_config<blayout=#pto.blayout<row_major>, slayout=#pto.slayout<none_box>, s_fractal_size=512, pad=#pto.pad_value<null>>} : memref<32x32xf32, #pto.address_space<left>> -> memref<32x32xf32, #pto.address_space<left>>
    %rhs = pto.alloc_tile : !pto.tile_buf<loc=right, dtype=f32, rows=32, cols=32, v_row=32, v_col=32>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=acc, dtype=f32, rows=32, cols=32, v_row=32, v_col=32>
    pto.tmatmul ins(%lhs, %rhs : memref<32x32xf32, #pto.address_space<left>>, !pto.tile_buf<loc=right, dtype=f32, rows=32, cols=32, v_row=32, v_col=32>) outs(%dst : !pto.tile_buf<loc=acc, dtype=f32, rows=32, cols=32, v_row=32, v_col=32>)
    return
  }
}

// CHECK: error: 'pto.bind_tile' op explicit tile config field 'blayout' for loc=left on arch a5 must be col_major, got row_major
